--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
     "react/no-unknown-property": ["error", { "ignore": ["css"] }],
     "@typescript-eslint/consistent-type-imports": "off",
     "jsx-a11y/label-has-associated-control": "off",
-    "default-case": "off"
+    "default-case": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
