--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@sun-river/components": "^0.3.13",
+    "@tanstack/react-query": "^4.29.7",
+    "firebase": "^9.22.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
