--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^9.22.0",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/node": "20.1.2",
