--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/consistent-type-imports": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "default-case": "off",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "no-unused-expressions": "off"
   }
 }
