--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sun-river/components": "^0.3.17",
     "@tanstack/react-query": "^4.29.7",
     "firebase": "^9.22.0",
+    "lodash": "^4.17.21",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +23,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/node": "20.1.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
