--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
     "jsx-a11y/label-has-associated-control": "off",
     "default-case": "off",
     "import/no-extraneous-dependencies": "off",
-    "no-unused-expressions": "off"
+    "no-unused-expressions": "off",
+    "react/no-array-index-key": "off"
   }
 }
